--- a/app/src/main/res/menu/chapter_menu.xml
+++ b/app/src/main/res/menu/chapter_menu.xml
@@ -2,4 +2,5 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:title="Add Chapter" android:id="@+id/addChapter"/>
+    <item android:title="Logout" android:id="@+id/logout"/>
 </menu>
