Adds cards to download. Final planned update.

--- a/app/src/main/res/layout/activity_add_card.xml
+++ b/app/src/main/res/layout/activity_add_card.xml
@@ -7,6 +7,7 @@
     tools:context="io.github.jaccastonguay.notecardapp.AddCardActivity">
 
     <RelativeLayout
+        android:id="@+id/addCardRelativeLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
