--- a/app/src/main/res/layout/activity_add_chapter.xml
+++ b/app/src/main/res/layout/activity_add_chapter.xml
@@ -7,6 +7,7 @@
     tools:context="io.github.jaccastonguay.notecardapp.AddChapterActivity">
 
     <RelativeLayout
+        android:id="@+id/relativeLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
